--- a/backend/my_computer/src/main/resources/application.properties
+++ b/backend/my_computer/src/main/resources/application.properties
@@ -1,15 +1,22 @@
 spring.application.name=my_computer
-# C?u h?nh server
 server.port=8080
 
-# C?u h?nh k?t n?i MySQL (?i?u ch?nh theo CSDL c?a b?n)
+# C?u hình datasource cho MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/laptop_store?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.security.enabled=false
-# N?u s? d?ng JPA, c? th? c?u h?nh ddl-auto (? ??y kh?ng c?n n?u d?ng JDBC thu?n t?y)
-# spring.jpa.hibernate.ddl-auto=update
 
-# C?c c?u h?nh Swagger: Kh?ng c?n th?m c?u h?nh ??c bi?t v?i springdoc, v? m?c ??nh URL s? l?:
+# T?t b?o m?t n?u b?n không dùng Spring Security
+spring.security.enabled=false
+
+# C?u hình JavaMailSender s? d?ng tài kho?n Gmail m?i c?a b?n
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mycomputer3032025@gmail.com
+spring.mail.password=bisc uwjd zfve omim
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# C?u hình Swagger (n?u c?n)
 # http://localhost:8080/swagger-ui/index.html
